cursor-opus/force-app/main/default/objects/Lead_Conversion_Setting__mdt/Lead_Conversion_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Lead Conversion Setting</label>
    <pluralLabel>Lead Conversion Settings</pluralLabel>
    <description>Configuration settings for bulk lead conversion process</description>
</CustomObject> 