cursor-opus/force-app/main/default/objects/Lead_Conversion_Setting__mdt/fields/Create_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Create_Opportunity__c</fullName>
    <label>Create Opportunity</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
    <description>Indicates whether to create an opportunity during lead conversion</description>
</CustomField> 