cursor-opus/force-app/main/default/objects/Lead_Conversion_Setting__mdt/fields/Default_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Default_Opportunity_Stage__c</fullName>
    <label>Default Opportunity Stage</label>
    <required>true</required>
    <type>Text</type>
    <length>255</length>
    <description>Default stage name for opportunities created during lead conversion</description>
</CustomField> 