cursor-opus/force-app/main/default/objects/Lead_Conversion_Setting__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
    <description>Indicates if this setting is currently active</description>
</CustomField> 